--- a/plugins/techdocs-backend-module-events/package.json
+++ b/plugins/techdocs-backend-module-events/package.json
@@ -26,7 +26,7 @@
     "@backstage/catalog-client": "workspace:^",
     "@backstage/catalog-model": "workspace:^",
     "@backstage/config": "workspace:^",
-    "@backstage/errors": "^1.2.0-next.0",
+    "@backstage/errors": "workspace:^",
     "@backstage/plugin-events-node": "workspace:^",
     "@octokit/webhooks-types": "^7.0.0",
     "git-url-parse": "^13.0.0",
