--- a/plugins/techdocs-backend-module-events/package.json
+++ b/plugins/techdocs-backend-module-events/package.json
@@ -9,6 +9,11 @@
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/backstage/backstage",
+    "directory": "plugins/techdocs-backend-module-events"
+  },
   "backstage": {
     "role": "backend-plugin-module"
   },
